--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>JS + CSS Clock</title>
-</head>
-<body>
-
-
+  <head>
+    <meta charset="UTF-8" />
+    <title>JS + CSS Clock</title>
+  </head>
+  <body>
     <div class="clock">
       <div class="clock-face">
         <div class="hand hour-hand"></div>
@@ -15,60 +13,127 @@
       </div>
     </div>
 
+    <style>
+      html {
+        background: #018ded url(https://unsplash.it/1500/1000?image=881&blur=5);
+        background-size: cover;
+        font-family: "helvetica neue";
+        text-align: center;
+        font-size: 10px;
+      }
 
-  <style>
-    html {
-      background: #018DED url(https://unsplash.it/1500/1000?image=881&blur=5);
-      background-size: cover;
-      font-family: 'helvetica neue';
-      text-align: center;
-      font-size: 10px;
-    }
+      body {
+        margin: 0;
+        font-size: 2rem;
+        display: flex;
+        flex: 1;
+        min-height: 100vh;
+        align-items: center;
+      }
 
-    body {
-      margin: 0;
-      font-size: 2rem;
-      display: flex;
-      flex: 1;
-      min-height: 100vh;
-      align-items: center;
-    }
+      .clock {
+        width: 30rem;
+        height: 30rem;
+        border: 20px solid white;
+        border-radius: 50%;
+        margin: 50px auto;
+        position: relative;
+        padding: 2rem;
+        box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #efefef,
+          inset 0 0 10px black, 0 0 10px rgba(0, 0, 0, 0.2);
+      }
 
-    .clock {
-      width: 30rem;
-      height: 30rem;
-      border: 20px solid white;
-      border-radius: 50%;
-      margin: 50px auto;
-      position: relative;
-      padding: 2rem;
-      box-shadow:
-        0 0 0 4px rgba(0,0,0,0.1),
-        inset 0 0 0 3px #EFEFEF,
-        inset 0 0 10px black,
-        0 0 10px rgba(0,0,0,0.2);
-    }
+      .clock-face {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        transform: translateY(
+          -3px
+        ); /* account for the height of the clock hands */
+      }
 
-    .clock-face {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      transform: translateY(-3px); /* account for the height of the clock hands */
-    }
+      .clock-face:after {
+        content: "";
+        display: block;
+        width: 15px;
+        height: 15px;
+        border-radius: 100%;
+        background-color: #fff;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
 
-    .hand {
-      width: 50%;
-      height: 6px;
-      background: black;
-      position: absolute;
-      top: 50%;
-    }
+      .hand {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+      }
 
-  </style>
+      .second-hand:after {
+        content: "";
+        display: block;
+        width: 5px;
+        height: 45%;
+        background-color: #fff;
+        position: absolute;
+        left: 50%;
+        bottom: 50%;
+        transform: translateX(-50%);
+      }
 
-  <script>
+      .min-hand:after {
+        content: "";
+        display: block;
+        width: 10px;
+        height: 35%;
+        background-color: #fff;
+        position: absolute;
+        left: 50%;
+        bottom: 50%;
+        transform: translateX(-50%);
+      }
 
+      .hour-hand:after {
+        content: "";
+        display: block;
+        width: 15px;
+        height: 25%;
+        background-color: #fff;
+        position: absolute;
+        left: 50%;
+        bottom: 50%;
+        transform: translateX(-50%);
+      }
+    </style>
 
-  </script>
-</body>
+    <script>
+      void (function () {
+        const secondDom = document.querySelector(".second-hand");
+        const minDom = document.querySelector(".min-hand");
+        const hourDom = document.querySelector(".hour-hand");
+        // 获取最新时间和设置指针角度
+        function setDate() {
+          let date = new Date();
+          // 获取秒
+          let seconds = date.getSeconds();
+          let secondsDegrees = seconds * 6;
+          // 获取分钟
+          let mins = date.getMinutes();
+          let minsDegrees = mins * 6 + 6 / 60 * seconds;
+          // 获取小时
+          let hours = date.getHours();
+          let hoursDegrees = hours * 6 + 30 / 60 * mins;
+          // 设置指针角度
+          secondDom.style.transform = `rotate(${second}deg)`;
+          minDom.style.transform = `rotate(${min}deg)`;
+          minDom.style.transform = `rotate(${min}deg)`;
+          // 重新注册
+          window.requestAnimationFrame(setDate);
+        }
+        window.requestAnimationFrame(setDate);
+      })();
+    </script>
+  </body>
 </html>
