第三个练习

--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -22,9 +22,17 @@
 
   <style>
 
-    /*
-      misc styles, nothing to do with CSS variables
-    */
+    :root {
+      --spacing: 10px;
+      --blur: 10px;
+      --base: #ffc600;
+    }
+    
+    img {
+      padding: var(--spacing);
+      filter: blur(var(--blur));
+      background-color: var(--base);
+    }
 
     body {
       text-align: center;
@@ -45,6 +53,18 @@
   </style>
 
   <script>
+    void function() {
+      const inputs = document.querySelectorAll('input');
+      const root = document.querySelector(':root');
+      function handleChange() {
+        let suffix = this.dataset.sizing || '';
+        root.style.setProperty(`--${this.name}`, this.value + suffix);
+      }
+      inputs.forEach(input => {
+        input.addEventListener('change', handleChange, false);
+        input.addEventListener('mousemove', handleChange, false);
+      });
+    }();
   </script>
 
 </body>
