--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -24,11 +24,16 @@
     }
 
     .panels {
+      display: flex;
       min-height: 100vh;
       overflow: hidden;
     }
 
     .panel {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
       background: #6B0F9C;
       box-shadow: inset 0 0 0 5px rgba(255,255,255,0.1);
       color: white;
@@ -56,6 +61,26 @@
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
+      flex: 1 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .panel > *:first-child {
+      transform: translateY(-100%);
+    }
+    
+    .panel.open-active > *:first-child {
+      transform: translateY(0);
+    }
+
+    .panel > *:last-child {
+      transform: translateY(100%);
+    }
+
+    .panel.open-active > *:last-child {
+      transform: translateY(0);
     }
 
     .panel p {
@@ -71,6 +96,7 @@
 
     .panel.open {
       font-size: 40px;
+      flex: 4;
     }
 
   </style>
@@ -105,7 +131,25 @@
   </div>
 
   <script>
+    void function() {
+      const panels = document.querySelectorAll('.panel');
+      
+      function handleClick(event) {
+        this.classList.toggle('open');
+      }
 
+      function handleTransitionend(event) {
+        console.log(event);
+        if (event.propertyName.indexOf('flex') !== -1) {
+          this.classList.toggle('open-active');
+        }
+      }
+
+      panels.forEach(item => {
+        item.addEventListener('click', handleClick, false);
+        item.addEventListener('transitionend', handleTransitionend, false);
+      })
+    }();
   </script>
 
 
